# graphql-freeze

./: .editorconfig  .gitignore  readme.md
.github/workflows/: publish.yml
codegen/: Cargo.toml
codegen-wrapper/: package.json  pnpm-lock.yaml  publish.sh  tsconfig.json
codegen-wrapper/scripts/: install.ts  make-dist-package.ts
codegen-wrapper/src/: install.ts
codegen/resources/: client.template  introspect.gql
codegen/src/: code_generator.rs  code_writer.rs  main.rs  schema.rs  schema_introspection.rs  schema_sdl.rs
runtime/: package.json  pnpm-lock.yaml  publish.sh  tsconfig.json
runtime/scripts/: make-dist-package.ts
runtime/src/: index.ts  request-encoder.ts
