[package]
name = "graphql-freeze-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1.16"
serde_json = "1.0"
graphql-parser = "0.4.0"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3.31"
crc32fast = "1.4.2"
clap = { version = "4.5.20", features = ["derive"] }
