[package]
name = "graphql-freeze-codegen"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_path_to_error = "0.1.16"
serde_json = "1.0"
graphql-parser = "0.4.0"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3.31"
crc32fast = "1.4.2"
clap = { version = "4.5.20", features = ["derive"] }
